traefik-hostheaders-k8s-dcos/cheese-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: www.cheese-stinton.com
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: http
  - host: www.cheese-cheddar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: http
  - host: www.cheese-wesleydale.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: http
